# label-printer

./: .gitignore  README.md
grbl/: config.h  settings.txt
notebooks/: print.ipynb
printing_wizard/: calculate_paths.py  gcode_conversion.py  main.py  print.ipynb  pyproject.toml  start_jupyter.bat
printing_wizard/notebooks/: print.ipynb
stepper-to-servo/: atmega8 set fuse to 8mhz internal magic params.txt  stepper-to-servo.ino  stepper-to-servo.pdsprj.DESKTOP-HE1T2AN.Georgi.workspace
stls/: Side 90deg support.stl  Tape holder base.stl  Tape holder cross link.stl  Tape holder foot link.stl  Tape holder foot.stl  Tape holder tightening anchor.stl  Tape holder tightening plate.stl  Tape tightening butterfly.stl  X Motor mount.stl  Y Axis Servo Mount.stl  Y Axis base mount.stl  Y Axis main.stl  Y axis clip.stl  Z carriage.stl  pen holder 10-16.stl  pen holder tightener.stl  scotch yoke.stl  z axis servo connector.stl
